# poly

./: .gitignore  AUTO_TRADER_IMPLEMENTATION_PLAN.md  analyze_direction.js  analyze_fills.js  analyze_trades.js  calc_pnl.js  check_my_orphans.js  check_orphan_wins.js  check_today_orphans.js  check_yesterday_orphans.js  event_check.json  fetch_all_trades.js  log-filter-note.txt  mc-go-live-guide.txt  trades_analysis.txt  trades_batch1.json  trades_batch2.json  trades_batch3.json  trades_batch4.json  trades_batch5.json  trades_batch6.json  trades_batch7.json  trades_test.json
polymarket-bot/: .env.example  Cargo.toml  README.md  WEBSOCKET_NOTES.txt  stats.sh
polymarket-bot/src/: config.rs  db.rs  executor.rs  lib.rs  main.rs  scanner.rs  types.rs  webhook.rs
polymarket-bot/src/api/: mod.rs  server.rs
polymarket-bot/src/api/routes/: auto_trading.rs  builder.rs  clob_auth.rs  discord.rs  market_data.rs  mc.rs  mint_maker.rs  mod.rs  opportunities.rs  orders.rs  positions.rs  trades.rs  wallet.rs
polymarket-bot/src/api/ws/: handler.rs  mod.rs
polymarket-bot/src/services/: clarification_monitor.rs  clob_errors.rs  ctf.rs  dispute_tracker.rs  mc_scanner.rs  metrics.rs  mod.rs  price_ws.rs  rate_limiter.rs  resolution_tracker.rs  retry.rs  safe_activation.rs  safe_proxy.rs  tick_size.rs  user_ws.rs
polymarket-bot/src/services/auto_trader/: auto_buyer.rs  auto_seller.rs  config.rs  dispute_sniper.rs  executor.rs  key_store.rs  mod.rs  position_monitor.rs  types.rs
polymarket-bot/src/services/mint_maker/: inventory.rs  mod.rs  order_manager.rs  runner.rs  scanner.rs  types.rs
polymarket-bot/src/strategies/: mint_maker.rs  mod.rs  no_bias.rs  sniper.rs
polymarket-bot/src/wallet/: encryption.rs  generator.rs  mod.rs
polymarket-web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  verify_fresh.cjs  verify_usdc.cjs  vite.config.ts
polymarket-web/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
polymarket-web/src/api/: client.ts
polymarket-web/src/components/: FAQ.tsx  Modal.tsx
polymarket-web/src/config/: wagmi.ts
polymarket-web/src/hooks/: useActivation.ts  useBalance.ts  useClobClient.ts  useDiscordAlerts.ts  usePolymarketAuth.ts  usePolymarketSigning.ts  (+3 more)
(+37 files in other folders)
