[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"
description = "Polymarket prediction market trading bot with Resolution Sniping and NO Bias strategies"
authors = ["Trading Bot"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Math with decimal precision
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Regex for parsing resolution rules
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Console output formatting
colored = "2.0"

# Polymarket SDK for live trading
polymarket-client-sdk = { version = "0.4", features = ["clob", "gamma"] }

# Alloy for Ethereum signing (required by polymarket-client-sdk)
alloy = { version = "1.4", default-features = false, features = ["signer-local", "signers"] }

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Session/Auth
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encryption for private keys
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# HMAC for CLOB API authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[[bin]]
name = "polymarket-bot"
path = "src/main.rs"

[[bin]]
name = "polymarket-server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 3
lto = true
